@@ -1,4 +1,4 @@
-Copyright (c) 2005-2015, Ilya Etingof <ilya@glas.net>
+Copyright (c) 2005-2016, Ilya Etingof <ilya@glas.net>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
