@@ -1,6 +1,13 @@
 #!/usr/bin/python
+#
+# This file is part of pyasn1-modules software.
+#
+# Copyright (c) 2005-2016, Ilya Etingof <ilya@glas.net>
+# License: http://pyasn1.sf.net/license.html
+#
 # Read ASN.1/PEM X.509 CRMF request on stdin, parse into
 # plain text, then build substrate from it
+#
 from pyasn1.codec.der import decoder, encoder
 from pyasn1_modules import rfc2511, pem
 import sys
