@@ -1,5 +1,10 @@
 #!/usr/bin/python
 #
+# This file is part of pyasn1-modules software.
+#
+# Copyright (c) 2005-2016, Ilya Etingof <ilya@glas.net>
+# License: http://pyasn1.sf.net/license.html
+#
 # Generate SNMPGET request, parse response
 #
 from pyasn1.codec.ber import encoder, decoder
