@@ -2,6 +2,7 @@ Revision 0.0.9, released XX-XX-2015
 -----------------------------------
 
 * Fix to __doc__ use in setup.py to make -O0 installation mode working.
+* Copyright added to source files.
 
 Revision 0.0.8, released 28-09-2015
 -----------------------------------
